--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-desktop-meta (2.1) unstable; urgency=medium
+
+  * goldendict pulls in a lot of Qt5 deps
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Sun, 03 Dec 2023 20:20:40 -0500
+
 ubuntu-desktop-meta (2.0) unstable; urgency=medium
 
   * Add Debian package
