--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-desktop-meta (2.7) unstable; urgency=medium
+
+  * Recommend fonts-jetbrains-mono
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Fri, 19 Jul 2024 17:27:14 -0400
+
 ubuntu-desktop-meta (2.6) unstable; urgency=medium
 
   * Depend on web-devicons-nvim
