Update changelog for 2.8 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-desktop-meta (2.8) unstable; urgency=medium
+
+  * Prefer fonts-jetbrains-mono-nerd
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Fri, 26 Jul 2024 19:18:59 -0400
+
 ubuntu-desktop-meta (2.7) unstable; urgency=medium
 
   * Recommend fonts-jetbrains-mono
