--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-desktop-meta (2.9) unstable; urgency=medium
+
+  * Recommend mpv-mpris
+  * Update description
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Wed, 09 Oct 2024 13:58:20 -0400
+
 ubuntu-desktop-meta (2.8) unstable; urgency=medium
 
   * Prefer fonts-jetbrains-mono-nerd
