Update changelog for 3.0 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-desktop-meta (3.0) unstable; urgency=medium
+
+  * d/control: compat level 13
+  * d/control: depend on fonts-noto-emoji
+  * d/control: formatting
+
+ -- Dimitry Ishenko <dimitry.ishenko@gmail.com>  Mon, 07 Jul 2025 18:33:05 -0400
+
 ubuntu-desktop-meta (2.9) unstable; urgency=medium
 
   * Recommend mpv-mpris
